--- a/meetups/templates/meetups/index.html
+++ b/meetups/templates/meetups/index.html
@@ -1,47 +1,29 @@
+{% extends 'meetups/base/base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}">
-    <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
-    <title>All Meetups</title>
-</head>
-<body>
-  <header id="main-header">
-    <nav>
-      <a href="/meetups" id="main-logo">Django Meetups</a>
-    </nav>
-    <h1>We got great meetups coming up!</h1>
-    <p>Find the one that best suits your needs!</p>
-  </header>
-  <main>
-    <section>
-      <h2>Upcoming Meetups</h2>
-      <ol>
-        {% for meetup_item in meetups %}
-          <li class="meetup-item">
-            <article>
-              <div class="meetup-summary">
-                <div class="meetup-image">
-                  <img src="" alt="">
-                </div>
-                <div class="meetup-details">
-                  <h3>{{ meetup_item.title }}</h3>
-                  <address>{{ meetup_item.location}}</address>
-                </div>
-              </div>
-              <div class="meetup-actions">
-                <a href="{% url 'meetup-details' meetup_item.slug %}" class="btn">More Details</a>
-              </div>
-            </article>
-          </li>
-        {% endfor %}
-      </ol>
-    </section>
-  </main>
-</body>
-</html> 
+{% block title %}
+  All Meetups
+{% endblock %}
+
+{% block site_css %}
+  <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
+{% endblock %}
+  
+{% block main_heading %}
+  We got great meetups coming up! 
+{% endblock %}
+
+{% block header_content %}
+  <p>Find the one that best suits your needs!</p>
+{% endblock %}
+
+{% block body %}
+  <section>
+    <h2>Upcoming Meetups</h2>
+    <ol>
+      {% for meetup_item in meetups %}
+        {% include 'meetups/includes/meetup-items.html' with title=meetup_item.title location='New York' image=meetup_item.image.url slug=meetup_item.slug %}
+      {% endfor %}
+    </ol>
+  </section>
+{% endblock %}
